--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crazyiter.android.transgo">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +20,8 @@
             </intent-filter>
         </activity>
 
-        <!--<meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode" />-->
-
         <activity android:name=".TipsActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".QRActivity" />
     </application>
 
 </manifest>
