--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':ormlite-android-5.1', ':ormlite-core-5.1', ':play-services-12.0.1', ':play-services-vision-15.0.2'
+include ':app'
